--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
 
-  	<meta charset="UTF-8">  <!-- para que aparezcan las tildes y las ñ  -->
+  	<meta charset="ISO-8859-1" />  <!-- para que aparezcan las tildes y las ñ  -->
 
 	<meta content="Duberney Londoño" name="author"/>
     <meta content="Objeto Virtual de Aprendizaje - OVA" name="description" />
@@ -15,6 +15,8 @@
 	<title>OVA UNAD</title> <!-- muestra título en la pestaña del navegador  -->
 
 	<link rel="stylesheet" href="css/normalize.css">  <!-- este es un enlace a un normalize  -->
+	<link href="https://fonts.googleapis.com/css?family=Eczar|Work+Sans" rel="stylesheet"> 	<!-- fuentes de google fonts  -->
+
 	<link rel="stylesheet" href="css/style.css">  <!-- este es un enlace a style  -->
 
 
@@ -23,6 +25,24 @@
 </head>
 
 <body>
+
+<DIV id="contenidos">		<!-- contenedor de todos los contenidos  -->
+	<header>
+		<h1>OBJETO VIRTUAL DE
+APRENDIZAJE PARA NORMAS APA</h1>			<!-- título  -->
+		<h2>Edición de documentos</h2>			<!-- título  -->
+	</header>
+
+<nav>  									<!-- espacio de navegación  -->
+	<ul>								<!-- lista  -->
+		<li><a href="www.google.com">Google</a></li>		<!-- elementos de lista por medio de enlace  -->
+		<li><a href="www.unad.edu.co">Universidad UNAD</a></li>
+		<li><a href="https://github.com/dubercho/OVA">Repositorio</a></li>
+	</ul>
+</nav>
+
+</DIV>
+
 
 
 </body>
