Cambios en títulos y enlaces
Título y subtítulo aplica la alineación.
Los enlaces quedan horizontales, de color blanco para visualizar, negro
cuando se pasa el cursor y rojo cuando se le hace click
Cambio del fondo.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
 <DIV id="contenidos">		<!-- contenedor de todos los contenidos  -->
-	<header>
+	<header>				<!-- encabezado  -->
 		<h1>OBJETO VIRTUAL DE
 APRENDIZAJE PARA NORMAS APA</h1>			<!-- título  -->
 		<h2>Edición de documentos</h2>			<!-- título  -->
@@ -35,9 +35,9 @@ APRENDIZAJE PARA NORMAS APA</h1>			<!-- título  -->
 
 <nav>  									<!-- espacio de navegación  -->
 	<ul>								<!-- lista  -->
-		<li><a href="www.google.com">Google</a></li>		<!-- elementos de lista por medio de enlace  -->
-		<li><a href="www.unad.edu.co">Universidad UNAD</a></li>
-		<li><a href="https://github.com/dubercho/OVA">Repositorio</a></li>
+		<li><a href="https://www.google.com" class="menu" >Google</a></li>		<!-- elementos de lista por medio de enlace  -->
+		<li><a href="https://www.unad.edu.co" class="menu" >Universidad UNAD</a></li>
+		<li><a href="https://github.com/dubercho/OVA" class="menu" >Repositorio</a></li>
 	</ul>
 </nav>
 
