--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>   <!-- Tipo de documento: HTML5  -->
 
 <html lang="es" class"no-js"> <!-- class"no-js" activa el modernizr -->
 
@@ -18,9 +18,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Eczar|Work+Sans" rel="stylesheet"> 	<!-- fuentes de google fonts  -->
 
 	<link rel="stylesheet" href="css/style.css">  <!-- este es un enlace a style  -->
-
-
-
  
 </head>
 
@@ -41,9 +38,9 @@ APRENDIZAJE PARA NORMAS APA</h1>			<!-- título  -->
 	</ul>
 </nav>
 
+
+
 </DIV>
-
-
 
 </body>
 
