--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
             </ul>
             </li>
             <li><a href=" " class="menu"><span><i class="icon icon-video-camera"></i></span>Multimedia</a></li>
-            <li><a href=" " class="menu"><span><i class="icon icon-dice"></i></span>Actividades</a></li>
+            <li><a href=" " class="menu"><span><i class="icon icon-dice"></i></span>Actividades</a>
+            <ul>
+                <li><a href="#">Actividades 1</a></li>
+                <li><a href="#">Actividades 2</a></li>
+                <li><a href="#">Actividades 3</a></li>
+            </ul>  
+            </li>
             <li><a href=" " class="menu"><span><i class="icon icon-user-tie"></i></span>Autores</a></li>
         </ul>
     </nav>
